# zkvm_benchmarks

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.cpu  risc0_bench.sh  rust-toolchain.toml  sp1_bench.sh  zkvm_bench.sh
common/: Cargo.toml
common/src/: constants.rs  generate_signatures.rs  lib.rs  signing_round.rs  utils.rs
results/risc0/gpu/: risc0_10_sig.txt  risc0_1_sig.txt  risc0_20_sig.txt
results/sp1/gpu/: sp1_100_sig.txt  sp1_10_sig.txt  sp1_1_sig.txt  sp1_200_sig.txt  sp1_20_sig.txt  sp1_50_sig.txt
zkvm/host/: Cargo.toml
zkvm/host/src/: main.rs
zkvm/methods/guest/: Cargo.toml
zkvm/methods/guest/src/: main.rs
zkvm/risc0/: Dockerfile.risc0  risc0-bench.sh
zkvm/risc0/host/: Cargo.toml
zkvm/risc0/host/src/: main.rs
zkvm/risc0/methods/: Cargo.toml
zkvm/risc0/methods/guest/: Cargo.toml
zkvm/risc0/methods/guest/src/: main.rs
zkvm/sp1/: Dockerfile.sp1
zkvm/sp1/host/: Cargo.toml  build.rs
zkvm/sp1/host/src/: main.rs
zkvm/sp1/program/: Cargo.toml
zkvm/sp1/program/src/: main.rs
zkvm/testing/: Cargo.toml
zkvm/testing/src/: main.rs
