[package]
name = "risc0-host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^3.0.5", features = ["cuda"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = "1.0"
leansig = { path = "../../../leanSig" }
common = { path = "../../../common" }
clap = { version = "4.6.0", features = ["derive"] }
