[package]
name = "sp1-host"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sp1-sdk = { version = "6.1.0", features = ["cuda", "native-gnark"] }
sp1-core-executor = { version = "6.1.0" }
tracing = "0.1.40"
dotenv = "0.15.0"
clap = "4.6.0"
bincode = "1"

leansig = { path = "../../../leanSig" }
common = { path = "../../../common" }
tokio = "1.51.1"

[build-dependencies]
sp1-build = { version = "6.0.1" }
